--- a/src/gameObjects/Game.css
+++ b/src/gameObjects/Game.css
@@ -5,14 +5,6 @@
   justify-content: space-evenly;
 }
 
-.game-board {
-  display: flex;
-  width: 510px;
-  height: 510px;
-  margin: auto;
-  justify-content: space-evenly;
-}
-
 .game-info {
   width: 200px;
   background-color: royalblue;
