--- a/src/gameObjects/Tile.css
+++ b/src/gameObjects/Tile.css
@@ -2,13 +2,15 @@
   display: flex;
   border: none;
   background-color: #1b358c;
-  width: 150px;
-  height: 150px;
-  margin: auto;
+  font-size: 168px;
+  align-content: center;
+  justify-content: center;
+  width: 28%;
+  height: 100%;
   flex-wrap: wrap;
 }
 
 .tile:focus {
   outline: none;
-  color: red;
+  color: #aaa;
 }
